# hhrr-django

./: .gitignore  manage.py  package-lock.json  pyproject.toml  tailwind.config.js
hhrr/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_employee.py  0003_holiday_employee_start_date_and_more.py  0004_vacationrequest.py  0005_team_approvers_vacationrequest_message.py  0006_vacationrequest_backup_person_and_more.py  0007_alter_vacationrequest_backup_person.py  0008_employee_role.py  0009_employee_birthdate.py
users/static/users/: output.css  styles.css
users/templates/: alerts.html  base.html  home_page.html  login_form.html  navbar.html  team_vacation_requests.html  update_vacation_request.html  user_vacation_requests.html  vacation_request.html
users/templatetags/: filters.py  form_filters.py
