[tool.poetry]
name = "hhrr-django"
version = "0.1.0"
description = "A platform to manage various aspects of the VAOVA employees"
authors = ["Juan P. Isaza M."]
package-mode=false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
